--- a/Taller 3 & 4/.project
+++ b/Taller 3 & 4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Taller 3 &amp; 4</name>
+	<name>Talleres 3 &amp; 4</name>
 	<comment></comment>
 	<projects>
 	</projects>
